# serializer version: 1
# name: test_sensor_setup_and_update[sensor.master2_current_profile-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.master2_current_profile',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Current Profile',
    'platform': 'ezbeq',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'current_profile',
    'unique_id': '01J959G9VRJH1TFGKW53GSZ11N_master2_current_profile',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_setup_and_update[sensor.master2_current_profile-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'master2 Current Profile',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.master2_current_profile',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Test Profile',
  })
# ---
# name: test_sensor_setup_and_update[sensor.master_current_profile-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.master_current_profile',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Current Profile',
    'platform': 'ezbeq',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'current_profile',
    'unique_id': '01J959G9VRJH1TFGKW53GSZ11N_master_current_profile',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_setup_and_update[sensor.master_current_profile-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'master Current Profile',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.master_current_profile',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Test Profile',
  })
# ---
